# --
# CHANGES - change log  of OTRS
# Copyright (C) 2001-2006 Martin Edenhofer <martin+code@otrs.org>
# --
# $Id: CHANGES,v 1.209.2.50 2006-07-04 14:51:40 cs Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --
2.0.5 (2006/??/??)
 - (2006/07/04) Fixed bug 1151 - Error when changing customer on ticket
    in TicketStatusView
 - (2006/06/22) Fixed Bug #1028 - Close subject not translated
 - (2006/06/17) Fixed bug #1240 - Tickets not shown in "New messages" if
    Auto Response "Reply" is active
 - (2006/06/14) Fixed bug #1206 - When no RELEASE file is available, no
    product and version is displaied and strange messages apear in the
    apache error log;  using standard values in this case now
 - (2006/06/13) Fixed Bug #1154 - Problem in displaying pending tickets in
    agent mailbox
 - (2006/06/02) fixed bug 1023 - Comma in From field creates multiple emails
    in webform.pl
 - (2006/04/27) fixed IE problem with image-buttons
    involved files: AdminSysConfigEdit.dtl and AdminSysConfig.pm
 - (2006/04/26) fixed format bug in Package Manager - PackageView
    involved files: AdminPackageManager.dtl and AdminPackageManager.pm
 - (2006/03/24) added SUSE 10.x RPM support
 - (2006/03/24) fixed bug# 925 - Binary Attachments incorrectly utf-8
    encoded in ticket replies
 - (2006/03/23) Fixed links to new phone/email ticket after a new
    customer is created via Kernel/Modules/AdminCustomerUser.pm
 - (2006/03/23) Changed Kernel/Modules/AdminResponse.pm and
    Kernel/System/StdResponse.pm to prevent creation/change of responses
    with empty names
 - (2006/03/22) changed Kernel/Modules/AdminSalutation.pm to prevent
    creation/change of entries with empty names
 - (2006/03/21) update of Portuguese language file (thanks to
    Manuel Menezes de Sequeira)