@@ -2,7 +2,7 @@
 # Kernel/Config/Defaults.pm - Default Config file for OTRS kernel
 # Copyright (C) 2001-2006 Martin Edenhofer <martin+code@otrs.org>
 # --
-# $Id: Defaults.pm,v 1.222.2.10 2006-07-04 10:58:21 cs Exp $
+# $Id: Defaults.pm,v 1.222.2.11 2006-07-07 12:46:11 cs Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -23,7 +23,7 @@ package Kernel::Config::Defaults;
 use strict;
 
 use vars qw(@ISA $VERSION);
-$VERSION = '$Revision: 1.222.2.10 $';
+$VERSION = '$Revision: 1.222.2.11 $';
 $VERSION =~ s/^\$.*:\W(.*)\W.+?$/$1/;
 
 # --
@@ -148,7 +148,7 @@ sub LoadDefaults {
             nb_NO => 'Norsk bokm&aring;l',
             sv => 'Svenska',
             hu => 'Hungarian',
-            zh_CN => 'Traditional Chinese',
+            zh_CN => 'Simplified Chinese',
 #            th => 'Thai',
             da => 'Dansk',
 #            ro => 'Romanian',
@@ -1730,6 +1730,6 @@ did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
 
 =head1 VERSION
 
-$Revision: 1.222.2.10 $ $Date: 2006-07-04 10:58:21 $
+$Revision: 1.222.2.11 $ $Date: 2006-07-07 12:46:11 $
 
 =cut
