@@ -112,7 +112,7 @@ TimeWorkingHours
 
 -->
 <otrs_config version="1.0" init="Framework">
-    <CVS>$Id: Framework.xml,v 1.80.2.8 2006-06-09 12:33:54 tr Exp $</CVS>
+    <CVS>$Id: Framework.xml,v 1.80.2.9 2006-07-07 12:46:11 cs Exp $</CVS>
     <ConfigItem Name="SecureMode" Required="1" Valid="1">
         <Description Lang="en">If enabled, the webinstaller (installer.pl) can't be used.</Description>
         <Description Lang="de">Wird diese Option aktiviert, kann der Web-Installer (installer.pl) nicht genutzt werden.</Description>
@@ -245,7 +245,7 @@ TimeWorkingHours
                 <Item Key="sv">Svenska</Item>
                 <Item Key="sk_SK">Slovak</Item>
                 <Item Key="hu">Hungarian</Item>
-                <Item Key="zh_CN">Traditional Chinese</Item>
+                <Item Key="zh_CN">Simplified Chinese</Item>
             </Hash>
         </Setting>
     </ConfigItem>
